--- a/scientific.html
+++ b/scientific.html
@@ -8,6 +8,7 @@
     <link href="navigationBarStyles.css" rel="stylesheet">
     <link href="scientificStyles.css" rel="stylesheet">
     <link href="bg2.css" rel="stylesheet">
+    <link href="scientificCalcGrid.css" rel="stylesheet">
     <link href="standardStyles.css" rel="stylesheet">
     <link href="base.css" rel="stylesheet">
 </head>
@@ -23,6 +24,10 @@
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
+        <button data-sci class="scientific-operations">2√</button>
+        <button data-sci class="scientific-operations">3√</button>
+        <button data-sci class="scientific-operations">x√</button>
+        
         <button data-ac class="span-two-func">AC</button>
         <button data-del class="func">DEL</button>
         <button data-operation class="operands-color">÷</button>
@@ -41,6 +46,24 @@
         <button data-number class="span-two-numpad">0</button>
         <button data-number class="numpad">.</button>
         <button data-equals class="operands-color">=</button>
+        <button data-sci class="scientific-operations">^2</button>
+        <button data-sci class="scientific-operations">^3</button>
+        <button data-sci class="scientific-operations">^x</button>
+        <button data-sci class="scientific-operations">e^x</button>
+        <button data-sci class="scientific-operations">10^x</button>
+        <button data-sci class="scientific-operations">ln</button>
+        <button data-sci class="scientific-operations">log10</button>
+        <button data-sci class="scientific-operations">logx</button>
+        <button data-sci class="scientific-operations">x!</button>
+        <button data-sci class="scientific-operations">|x|</button>
+        <button data-sci class="scientific-operations">⌈x⌉</button>
+        <button data-sci class="scientific-operations">⌊x⌋</button>
+        <button data-sci class="scientific-operations">e</button>
+        <button data-sci class="scientific-operations">π</button>
+        <button data-sci class="scientific-operations">1/x</button>
+        <button data-sci class="scientific-operations">%</button>
+
+        <button data-sci class="scientific-operations">(-)</button>
     </div>
 </body>
 </html>
