--- a/trigonometric.html
+++ b/trigonometric.html
@@ -24,48 +24,50 @@
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
+        <button data-deg class="span-three-func">DEG</button>
+        <button data-rad class="span-three-func">RAD</button>
         <button data-ac class="span-two-func">AC</button>
         <button data-del class="func">DEL</button>
         <button data-operation class="operands-color">÷</button>
-        <button data-number class="numpad">7</button>
-        <button data-number class="numpad">8</button>
-        <button data-number class="numpad">9</button>
-        <button data-operation class="operands-color">×</button>
-        <button data-number class="numpad">4</button>
-        <button data-number class="numpad">5</button>
-        <button data-number class="numpad">6</button>
-        <button data-operation class="operands-color">-</button>
-        <button data-number class="numpad">1</button>
-        <button data-number class="numpad">2</button>
-        <button data-number class="numpad">3</button>
-        <button data-operation class="operands-color">+</button>
-        <button data-number class="span-two-numpad">0</button>
-        <button data-number class="numpad">.</button>
-        <button data-equals class="operands-color">=</button>
         <button data-trig class="trig-operations">sin</button>
         <button data-trig class="trig-operations">cos</button>
         <button data-trig class="trig-operations">tan</button>
         <button data-trig class="trig-operations">csc</button>
         <button data-trig class="trig-operations">sec</button>
         <button data-trig class="trig-operations">cot</button>
+        <button data-number class="numpad">7</button>
+        <button data-number class="numpad">8</button>
+        <button data-number class="numpad">9</button>
+        <button data-operation class="operands-color">×</button>
         <button data-trig class="trig-operations">sinh</button>
         <button data-trig class="trig-operations">cosh</button>
         <button data-trig class="trig-operations">tanh</button>
         <button data-trig class="trig-operations">csch</button>
         <button data-trig class="trig-operations">sech</button>
         <button data-trig class="trig-operations">coth</button>
+        <button data-number class="numpad">4</button>
+        <button data-number class="numpad">5</button>
+        <button data-number class="numpad">6</button>
+        <button data-operation class="operands-color">-</button>
         <button data-trig class="trig-operations">asin</button>
         <button data-trig class="trig-operations">acos</button>
         <button data-trig class="trig-operations">atan</button>
         <button data-trig class="trig-operations">acsc</button>
         <button data-trig class="trig-operations">asec</button>
         <button data-trig class="trig-operations">acot</button>
+        <button data-number class="numpad">1</button>
+        <button data-number class="numpad">2</button>
+        <button data-number class="numpad">3</button>
+        <button data-operation class="operands-color">+</button>
         <button data-trig class="trig-operations">asinh</button>
         <button data-trig class="trig-operations">acosh</button>
         <button data-trig class="trig-operations">atanh</button>
         <button data-trig class="trig-operations">acsch</button>
         <button data-trig class="trig-operations">asech</button>
         <button data-trig class="trig-operations">acoth</button>
+        <button data-number class="span-two-numpad">0</button>
+        <button data-number class="numpad">.</button>
+        <button data-equals class="operands-color">=</button>
     </div>
 </body>
 </html>
