--- a/scientific.html
+++ b/scientific.html
@@ -11,59 +11,57 @@
     <link href="scientificCalcGrid.css" rel="stylesheet">
     <link href="standardStyles.css" rel="stylesheet">
     <link href="base.css" rel="stylesheet">
+    <link href="img/icon.ico" rel="icon">
 </head>
 <body>
     <ul>
         <li><a href="standard.html">Standard</a></li>
         <li>Scientific</li>
         <li><a href="trigonometric.html">Trigonometric</a></li>
-        <li><a href="about.html">About</a></li>
     </ul>
     <div class="calculator-grid">
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
             <div data-current-operand class="current-operand"></div>
         </div>
-        <button data-sci class="scientific-operations">2√</button>
-        <button data-sci class="scientific-operations">3√</button>
-        <button data-sci class="scientific-operations">x√</button>
-        
-        <button data-ac class="span-two-func">AC</button>
-        <button data-del class="func">DEL</button>
-        <button data-operation class="operands-color">÷</button>
-        <button data-number class="numpad">7</button>
-        <button data-number class="numpad">8</button>
-        <button data-number class="numpad">9</button>
-        <button data-operation class="operands-color">×</button>
-        <button data-number class="numpad">4</button>
-        <button data-number class="numpad">5</button>
-        <button data-number class="numpad">6</button>
-        <button data-operation class="operands-color">-</button>
-        <button data-number class="numpad">1</button>
-        <button data-number class="numpad">2</button>
-        <button data-number class="numpad">3</button>
-        <button data-operation class="operands-color">+</button>
-        <button data-number class="span-two-numpad">0</button>
-        <button data-number class="numpad">.</button>
-        <button data-equals class="operands-color">=</button>
         <button data-sci class="scientific-operations">^2</button>
         <button data-sci class="scientific-operations">^3</button>
         <button data-sci class="scientific-operations">^x</button>
         <button data-sci class="scientific-operations">e^x</button>
+        <button data-ac class="span-two-func">AC</button>
+        <button data-del class="func">DEL</button>
+        <button data-operation class="operands-color">÷</button>
+        <button data-sci class="scientific-operations">2√</button>
+        <button data-sci class="scientific-operations">3√</button>
+        <button data-sci class="scientific-operations">x√</button>
         <button data-sci class="scientific-operations">10^x</button>
-        <button data-sci class="scientific-operations">ln</button>
+        <button data-number class="numpad">7</button>
+        <button data-number class="numpad">8</button>
+        <button data-number class="numpad">9</button>
+        <button data-operation class="operands-color">×</button>
         <button data-sci class="scientific-operations">log10</button>
         <button data-sci class="scientific-operations">logx</button>
+        <button data-sci class="scientific-operations">ln</button>
+        <button data-sci class="scientific-operations">e</button>
+        <button data-number class="numpad">4</button>
+        <button data-number class="numpad">5</button>
+        <button data-number class="numpad">6</button>
+        <button data-operation class="operands-color">-</button>
+        <button data-sci class="scientific-operations">1/x</button>
+        <button data-sci class="scientific-operations">%</button>
+        <button data-sci class="scientific-operations">(-)</button>
+        <button data-sci class="scientific-operations">π</button>
+        <button data-number class="numpad">1</button>
+        <button data-number class="numpad">2</button>
+        <button data-number class="numpad">3</button>
+        <button data-operation class="operands-color">+</button>
         <button data-sci class="scientific-operations">x!</button>
         <button data-sci class="scientific-operations">|x|</button>
         <button data-sci class="scientific-operations">⌈x⌉</button>
         <button data-sci class="scientific-operations">⌊x⌋</button>
-        <button data-sci class="scientific-operations">e</button>
-        <button data-sci class="scientific-operations">π</button>
-        <button data-sci class="scientific-operations">1/x</button>
-        <button data-sci class="scientific-operations">%</button>
-
-        <button data-sci class="scientific-operations">(-)</button>
+        <button data-number class="span-two-numpad">0</button>
+        <button data-number class="numpad">.</button>
+        <button data-equals class="operands-color">=</button>
     </div>
 </body>
 </html>
