--- a/trigonometric.html
+++ b/trigonometric.html
@@ -11,13 +11,13 @@
     <link href="trigCalcGrid.css" rel="stylesheet">
     <link href="bg3.css" rel="stylesheet">
     <link href="base.css" rel="stylesheet">
+    <link href="img/icon.ico" rel="icon">
 </head>
 <body>
     <ul>
         <li><a href="standard.html">Standard</a></li>
         <li><a href="scientific.html">Scientific</a></li>
         <li>Trigonometric</li>
-        <li><a href="about.html">About</a></li>
     </ul>
     <div class="calculator-grid">
         <div class="output">
