--- a/standard.html
+++ b/standard.html
@@ -10,6 +10,7 @@
     <link href="bg1.css" rel="stylesheet">
     <link href="base.css" rel="stylesheet">
     <link href="standardCalcGrid.css" rel="stylesheet">
+    <link href="img/icon.ico" rel="icon">
     <script src="standardScript.js" defer></script>
 </head>
 <body>
@@ -17,7 +18,6 @@
         <li>Standard</li>
         <li><a href="scientific.html">Scientific</a></li>
         <li><a href="trigonometric.html">Trigonometric</a></li>
-        <li><a href="about.html">About</a></li>
     </ul>
     <div class="calculator-grid">
         <div class="output">
