--- a/scientific.html
+++ b/scientific.html
@@ -12,6 +12,7 @@
     <link href="standardStyles.css" rel="stylesheet">
     <link href="base.css" rel="stylesheet">
     <link href="img/icon.ico" rel="icon">
+    <script src="standardScript.js" defer></script>
 </head>
 <body>
     <ul>
