--- a/trigonometric.html
+++ b/trigonometric.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trigonometric Calculator</title>
-    <link href="navigationBarStyles.css" rel="stylesheet">
-    <link href="trigonometricStyles.css" rel="stylesheet">
-    <link href="standardStyles.css" rel="stylesheet">
-    <link href="trigCalcGrid.css" rel="stylesheet">
-    <link href="bg3.css" rel="stylesheet">
-    <link href="base.css" rel="stylesheet">
+    <link href="css/navigationBarStyles.css" rel="stylesheet">
+    <link href="css/trigonometricStyles.css" rel="stylesheet">
+    <link href="css/standardStyles.css" rel="stylesheet">
+    <link href="css/trigCalcGrid.css" rel="stylesheet">
+    <link href="css/bg3.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
     <link href="img/icon.ico" rel="icon">
-    <script src="standardScript.js" defer></script>
+    <script src="js/standardScript.js" defer></script>
 </head>
 <body>
     <ul>
