--- a/standard.html
+++ b/standard.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link href="standardStyles.css" rel="stylesheet">
-    <link href="navigationBarStyles.css" rel="stylesheet">
-    <link href="bg1.css" rel="stylesheet">
-    <link href="base.css" rel="stylesheet">
-    <link href="standardCalcGrid.css" rel="stylesheet">
+    <link href="css/standardStyles.css" rel="stylesheet">
+    <link href="css/navigationBarStyles.css" rel="stylesheet">
+    <link href="css/bg1.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
+    <link href="css/standardCalcGrid.css" rel="stylesheet">
     <link href="img/icon.ico" rel="icon">
-    <script src="standardScript.js" defer></script>
+    <script src="js/standardScript.js" defer></script>
 </head>
 <body>
     <ul class="navLinks">
